feat: add nginx.conf and simplify deployment script
- Add nginx.conf for single-container deployment with API proxy to port 6084
- Simplify deployment from dual-container to single nginx container architecture
- Fix Docker build issue with missing nginx configuration file
- Update health check references to use correct container name
- Optimize deployment script for better reliability and maintainability

--- a/.github/workflows/aws.deploy.dev.yaml
+++ b/.github/workflows/aws.deploy.dev.yaml
@@ -79,67 +79,23 @@ jobs:
           mkdir -p /root/inpayos-cashier-admin/logs
           cd /root/inpayos-cashier-admin
           
-          # 创建nginx配置文件用于API代理
-          cat > nginx.conf << 'EOF'
-          server {
-              listen 80;
-              server_name _;
-              
-              # 前端静态文件
-              location / {
-                  proxy_pass http://app:3000;
-                  proxy_http_version 1.1;
-                  proxy_set_header Upgrade $http_upgrade;
-                  proxy_set_header Connection 'upgrade';
-                  proxy_set_header Host $host;
-                  proxy_set_header X-Real-IP $remote_addr;
-                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                  proxy_set_header X-Forwarded-Proto $scheme;
-                  proxy_cache_bypass $http_upgrade;
-              }
-              
-              # API代理转发到InPayOS Cashier Admin API
-              location /api/ {
-                  proxy_pass http://43.204.234.146:6084/;
-                  proxy_http_version 1.1;
-                  proxy_set_header Host $host;
-                  proxy_set_header X-Real-IP $remote_addr;
-                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                  proxy_set_header X-Forwarded-Proto $scheme;
-              }
-          }
-          EOF
-          
           # 登录到 GitHub Container Registry
           echo '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           
           # 停止并删除现有容器
-          docker stop inpayos-cashier-admin-app || true
-          docker rm inpayos-cashier-admin-app || true
-          docker stop inpayos-cashier-admin-nginx || true
-          docker rm inpayos-cashier-admin-nginx || true
+          docker stop inpayos-cashier-admin || true
+          docker rm inpayos-cashier-admin || true
           
           # 拉取最新镜像
           docker pull ghcr.io/ayhero/inpayos-cashier-admin:latest
           
-          # 启动前端应用容器
+          # 启动应用容器（nginx + 前端静态文件）
           docker run -d \
-            --name inpayos-cashier-admin-app \
-            --restart unless-stopped \
-            -p 3001:3000 \
-            -e NODE_ENV=production \
-            -e VITE_API_URL=http://localhost/api \
-            -v /root/inpayos-cashier-admin/logs:/app/logs \
-            ghcr.io/ayhero/inpayos-cashier-admin:latest
-          
-          # 启动nginx代理容器
-          docker run -d \
-            --name inpayos-cashier-admin-nginx \
+            --name inpayos-cashier-admin \
             --restart unless-stopped \
             -p 8081:80 \
-            -v /root/inpayos-cashier-admin/nginx.conf:/etc/nginx/conf.d/default.conf:ro \
-            --link inpayos-cashier-admin-app:app \
-            nginx:alpine
+            -v /root/inpayos-cashier-admin/logs:/var/log/nginx \
+            ghcr.io/ayhero/inpayos-cashier-admin:latest
           
           # 等待服务启动
           sleep 15
@@ -149,7 +105,7 @@ jobs:
           docker ps -a | grep inpayos-cashier-admin
           
           # 检查应用是否启动成功
-          if docker ps | grep inpayos-cashier-admin-nginx | grep -q "Up"; then
+          if docker ps | grep inpayos-cashier-admin | grep -q "Up"; then
             echo "✅ InPayOS Cashier Admin frontend is running"
             
             # 检查端口监听
@@ -166,11 +122,9 @@ jobs:
             
             # 显示最近日志
             echo "📝 Recent logs:"
-            docker logs --tail=20 inpayos-cashier-admin-app
-            docker logs --tail=10 inpayos-cashier-admin-nginx
+            docker logs --tail=20 inpayos-cashier-admin
           else
-            echo "❌ InPayOS Cashier Admin containers failed to start"
-            docker logs inpayos-cashier-admin-app
-            docker logs inpayos-cashier-admin-nginx
+            echo "❌ InPayOS Cashier Admin container failed to start"
+            docker logs inpayos-cashier-admin
             exit 1
           fi
