--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # 生产环境配置
-VITE_APP_TITLE=InPayOS Cashier后台
-VITE_API_BASE_URL=http://localhost:3202
+VITE_APP_TITLE=InPayOS Cashier Admin后台
+VITE_API_BASE_URL=http://localhost:3201
 VITE_APP_ENV=production
