--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # 开发环境配置
 VITE_APP_TITLE=InPayOS Cashier Admin后台 (开发环境)
-VITE_API_BASE_URL=http://localhost:3201
+VITE_API_BASE_URL=/api
 VITE_APP_ENV=development
