--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # 生产环境配置
 VITE_APP_TITLE=InPayOS Cashier Admin后台
-VITE_API_BASE_URL=http://localhost:3201
+VITE_API_BASE_URL=/api
 VITE_APP_ENV=production
