fix: 修复代理服务器无法连接后端API的问题
- 将代理服务器目标地址从localhost改为host.docker.internal
- 添加Docker网络配置--add-host host.docker.internal:host-gateway
- 解决容器内部localhost无法访问宿主机服务的问题
- 修复ECONNREFUSED连接错误，确保正确连接到6084端口

--- a/.github/workflows/aws.deploy.dev.yaml
+++ b/.github/workflows/aws.deploy.dev.yaml
@@ -98,6 +98,7 @@ jobs:
             --restart unless-stopped \
             -p 3201:80 \
             -v /root/inpayos-cashier-admin/logs:/var/log/supervisor \
+            --add-host host.docker.internal:host-gateway \
             ghcr.io/ayhero/inpayos-cashier-admin:latest
           
           # 等待服务启动
